הכפלתי את הכפתורים של המיון

--- a/renderArrays.html
+++ b/renderArrays.html
@@ -16,6 +16,8 @@
     <Br><Br>
     <button class=sorterButton id="abSorterButton">מיון לפי א' ב'</button>
     <button class=sorterButton id="priceSorterButton">מיון לפי מחיר</button>
+    <button class=sorterButton id="abSorterButton">מיון לפי א' ב'</button>
+    <button class=sorterButton id="priceSorterButton">מיון לפי מחיר</button>
     <p>חיפוש נעל לפי שם</p>
     <p><input type="חיפוש" id="shoeNameSearch" /></p>
     <Br><Br>
